# startopengl

./: CMakeLists.txt  CMakeSettings.json  README.md  glad.c  main.cpp
include/glad/: glad.h
